* dpkg-deb/dpkg-deb.h (MAXFILENAME): New macro. 	* dpkg-deb/build.c (getfi): Use MAXFILENAME instead of the hardcoded 	value '2048'.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2007-02-13  Guillem Jover  <guillem@debian.org>
 
+	* dpkg-deb/dpkg-deb.h (MAXFILENAME): New macro.
+	* dpkg-deb/build.c (getfi): Use MAXFILENAME instead of the hardcoded
+	value '2048'.
+
+2007-02-13  Guillem Jover  <guillem@debian.org>
+
 	* lib/compression.c (decompress_cat): Use BZ_IO_ERROR instead of
 	Z_ERRNO for the error value returned by BZ2_bzerror.
 
