Exit with an error instead of an assert if a file name is too long when building a .deb package. Closes: #393069

--- a/debian/changelog
+++ b/debian/changelog
@@ -32,6 +32,8 @@ dpkg (1.14.0) UNRELEASED; urgency=low
   * Fix confusing bottom status lines in dselect, unifying them by removing
     the method or package name and capitalizing. Closes: #9085
   * Check proper error value returned by BZ2_bzerror. Closes: #410605
+  * Exit with an error instead of an assert if a file name is too long when
+    building a .deb package. Closes: #393069
 
   [ Updated dpkg translations ]
   * Romanian (Eddy Petrișor).
