Exit with an error instead of an assert if the number of conflictors is exceeded. Remove bogus comments. Closes: #377855

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2007-02-13  Guillem Jover  <guillem@debian.org>
 
+	* src/archives.c (MAXCONFLICTORS): New macro.
+	(conflictor): Use MAXCONFLICTORS instad of hardcoded value '20', and
+	remove non-matching comments.
+	(check_conflict): Exit with an error instead of an assert. Move part
+	of the comment to the error message, remove the rest as non-matching.
+
+2007-02-13  Guillem Jover  <guillem@debian.org>
+
 	* dpkg-deb/build.c (getfi): Exit with an error instead of an assert.
 
 2007-02-13  Guillem Jover  <guillem@debian.org>
