--- a/debian/changelog
+++ b/debian/changelog
@@ -34,6 +34,8 @@ dpkg (1.14.0) UNRELEASED; urgency=low
   * Check proper error value returned by BZ2_bzerror. Closes: #410605
   * Exit with an error instead of an assert if a file name is too long when
     building a .deb package. Closes: #393069
+  * Exit with an error instead of an assert if the number of conflictors is
+    exceeded. Remove bogus comments. Closes: #377855
 
   [ Updated dpkg translations ]
   * Romanian (Eddy Petrișor).
