* scripts/dpkg-source.pl (checkstats): Take '$dscdir' as an explicit argument. Fix all callers. (checktype): Take '$dir', '$fn' and '$type' as explicit arguments. Fix all callers.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2007-02-17  Guillem Jover  <guillem@debian.org>
 
+	* scripts/dpkg-source.pl (checkstats): Take '$dscdir' as an explicit
+	argument. Fix all callers.
+	(checktype): Take '$dir', '$fn' and '$type' as explicit arguments. Fix
+	all callers.
+
+2007-02-17  Guillem Jover  <guillem@debian.org>
+
 	* scripts/update-alternatives.pl: Check if '$alink' is defined before
 	using '$aslavelinkcount{$alink}'. Only read_link_group if '$mode' is
 	not 'install'.
