Fix regular expression special-casing Origin, Bugs and Maintainer fields which was making X[SBC]- fields containing such strings to propagate into the .deb control file unprocessed. Thanks to Colin Watson.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-02-28  Colin Watson  <cjwatson@ubuntu.com>
+
+	* scripts/dpkg-gencontrol.pl: Add missing parenthesis in regular
+	expression handling Origin, Bugs and Maintainer for control file
+	fields.
+
 2007-02-17  Guillem Jover  <guillem@debian.org>
 
 	* scripts/dpkg-source.pl (checkstats): Take '$dscdir' as an explicit
