--- a/debian/changelog
+++ b/debian/changelog
@@ -36,6 +36,9 @@ dpkg (1.14.0) UNRELEASED; urgency=low
     building a .deb package. Closes: #393069
   * Exit with an error instead of an assert if the number of conflictors is
     exceeded. Remove bogus comments. Closes: #377855
+  * Fix regular expression special-casing Origin, Bugs and Maintainer fields
+    which was making X[SBC]- fields containing such strings to propagate into
+    the .deb control file unprocessed. Thanks to Colin Watson.
 
   [ Updated dpkg translations ]
   * Romanian (Eddy Petrișor).
