Add support for '--admindir' in dpkg-buildpackage, dpkg-checkbuilddeps and dpkg-shlibdeps. Closes: #162348

--- a/debian/changelog
+++ b/debian/changelog
@@ -39,6 +39,8 @@ dpkg (1.14.0) UNRELEASED; urgency=low
   * Fix regular expression special-casing Origin, Bugs and Maintainer fields
     which was making X[SBC]- fields containing such strings to propagate into
     the .deb control file unprocessed. Thanks to Colin Watson.
+  * Add support for '--admindir' in dpkg-buildpackage, dpkg-checkbuilddeps
+    and dpkg-shlibdeps. Closes: #162348
 
   [ Updated dpkg translations ]
   * Romanian (Eddy Petrișor).
