--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,8 @@
+2007-02-28  Guillem Jover  <guillem@debian.org>
+
+	* dpkg-source.1: Document new option '--admindir'.
+	* dpkg-checkbuilddeps.1: Likewise.
+
 2007-01-24  Frank Lichtenheld  <djpig@debian.org>
 
 	* 822-date.1: 822-date is now deprecated. Document this fact in
