--- a/man/dpkg-scansources.1
+++ b/man/dpkg-scansources.1
@@ -1,8 +1,8 @@
-.TH dpkg\-scansources 1 "2006-05-10" "Debian Project" "dpkg utilities"
-.SH "NAME"
+.TH dpkg\-scansources 1 "2007-03-06" "Debian Project" "dpkg utilities"
+.SH NAME
 dpkg\-scansources \- search for '.dsc' files and build the 'Sources' index
 .
-.SH "SYNOPSIS"
+.SH SYNOPSIS
 .B dpkg\-scansources
 .RI [ options ]
 .I binary-dir
@@ -11,7 +11,7 @@ dpkg\-scansources \- search for '.dsc' files and build the 'Sources' index
 .B >
 .I Sources
 .
-.SH "DESCRIPTION"
+.SH DESCRIPTION
 \fBdpkg-scansources\fR scans the given \fIbinary-dir\fR for \fI.dsc\fR files.
 These are used to create a Debian source index, which is output to
 stdout.
@@ -41,11 +41,8 @@ you will probably need to compress the file with
 except on local access (i.e.
 .B file://
 sources).
-.SH "OPTIONS"
-.IP "\fB\-\-debug\fR" 4
-Turn debugging on.
-.IP "\fB\-\-help\fR" 4
-Show the usage message and die.
+.
+.SH OPTIONS
 .IP "\fB\-n\fR, \fB\-\-no\-sort\fR" 4
 Don't sort the index records. Normally they are sorted by source package
 name.
@@ -58,11 +55,15 @@ file. It contains only two whitespace separated fields, the first is the
 source package name and the second is the section. Blank lines and comment
 lines are ignored in the normal manner. If a package appears in both files
 the source override takes precedence for setting the section.
+.IP "\fB\-\-debug\fR" 4
+Turn debugging on.
+.IP "\fB\-\-help\fR" 4
+Show the usage message and exit.
 .IP "\fB\-\-version\fR" 4
-Print the version number and exit.
+Show the version and exit.
 .
 .SH "SEE ALSO"
 .BR dpkg\-scanpackages (1).
 .
-.SH "AUTHOR"
+.SH AUTHOR
 Roderick Schertler <roderick@argon.org>
