--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,41 @@
+2007-03-06  Guillem Jover  <guillem@debian.org>
+
+	* cleanup-info.8: Unify the summary.
+	Unify '--help' and '--version' descriptions.
+	Remove unneeded quotes in section names.
+	* update-alternatives.8: Likewise.
+	* start-stop-daemon.8: Likewise.
+	* dpkg-deb.1: Likewise.
+	* dpkg-divert.8: Likewise.
+	* dpkg-query.1: Likewise.
+	* dpkg-name.1: Likewise.
+	* dpkg-checkbuilddeps.1: Likewise.
+	* dpkg-architecture.1: Likewise.
+	* dpkg-split.1: Likewise.
+	* dpkg-statoverride.8: Likewise.
+	* dpkg-scanpackages.1: Likewise.
+	* dpkg-scansources.1: Likewise.
+
+	* dpkg-deb.1: Separate option aliased names with ',' instead of '|'.
+	* dpkg-name.1: Likewise.
+	* dpkg-split.1: Likewise.
+	* dpkg-query.1: Likewise.
+	* start-stop-daemon.8: Likewise.
+
+	* dpkg-divert.8: List each options in the OPTIONS section.
+	* dpkg-scanpackages.1: Likewise.
+	* start-stop-daemon.8: Likewise.
+
+	* dpkg-divert.8: Remove redundant '<>' characters to delimit a
+	replacable argument.
+	* dpkg-statoverride.8: Likewise.
+
+	* update-alternatives.8: Mark commands in examples as bold.
+	* dpkg-architecture.1: Reorder sections. Indent examples.
+	* dpkg-name.1: Do not specify in which programming language the
+	program is written in.
+	* dpkg-deb.1: Split '--extract' and '--vextract' options.
+
 2007-02-28  Guillem Jover  <guillem@debian.org>
 
 	* dpkg-source.1: Document new option '--admindir'.
