--- a/man/dpkg-name.1
+++ b/man/dpkg-name.1
@@ -3,46 +3,41 @@
 .\"
 .\" This is free software; see the GNU General Public Licence version 2
 .\" or later for copying conditions.  There is NO warranty.
-.TH dpkg\-name 1 "2006-02-28" "Debian Project" "dpkg utilities"
+.TH dpkg\-name 1 "2007-03-06" "Debian Project" "dpkg utilities"
 .SH NAME
 dpkg\-name \- rename Debian packages to full package names
+.
 .SH SYNOPSIS
 .B dpkg\-name
-.RB [ \-a | \-\-no\-architecture ]
-.RB [ \-o | \-\-overwrite ]
-.RB [ \-s | \-\-subdir
-.RI [ dir ]]
-.RB [ \-c | \-\-create\-dir ]
-.RB [ \-h | \-\-help ]
-.RB [ \-v | \-\-version ]
-.RB [ \-l | \-\-license ]
-.RB [ \-k | \-\-symlink ]
+.RI [ options  ]
 .RB [ \-\- ]
-.RI [ files ]
+.I files
+.
 .SH DESCRIPTION
 .PP
 This manual page documents the
 .B dpkg\-name
-sh script which provides an easy way to rename
+program which provides an easy way to rename
 .B Debian
 packages into their full package names. A full package name consists
-of <package>_<version>_<architecture>.deb as specified in the control
-file of the package. The <version> part of the filename consists of
+of \fI<package>_<version>_<architecture>.deb\fP as specified in the control
+file of the package. The \fI<version>\fP part of the filename consists of
 the upstream version information optionally followed by a hyphen and
 the revision information.
+.
 .SH OPTIONS
 .TP
-.B "\-a, \-\-no\-architecture"
+.BR \-a ", " \-\-no\-architecture
 The destination filename will not have the architecture information.
 .TP
-.B "\-k, \-\-symlink"
+.BR \-k ", " \-\-symlink
 Create a symlink, instead of moving.
 .TP
-.B "\-o, \-\-overwrite"
+.BR \-o ", " \-\-overwrite
 Existing files will be overwritten if they have the same name as the
 destination filename.
 .TP
-.BR "\-s, \-\-subdir" " [\fIdir\fP]"
+.BR \-s ", " \-\-subdir " [\fIdir\fP]"
 Files will be moved into a subdirectory. If the directory given as argument exists
 the files will be moved into that directory otherwise the name of
 the target directory is extracted from the section field in the
@@ -54,20 +49,20 @@ as well as for sections `non-free' and `contrib' the target directory is
 a lot of packages will find their way to the `no\-section' area. Use
 this option with care, it's messy.
 .TP
-.B "\-c, \-\-create\-dir"
+.BR \-c ", " \-\-create\-dir
 This option can used together with the \-s option. If a target
 directory isn't found it will be created automatically.
 .B Use this option with care.
 .TP
-.B "\-h, \-\-help"
-Print a usage message and exit successfully.
+.BR \-h ", " \-\-help
+Show the usage message and exit.
 .TP
-.B "\-v, \-\-version"
-Print version information and exit successfully.
+.BR \-v ", " \-\-version
+Show the version and exit.
 .TP
-.B "\-l, \-\-license"
-Print copyright information and (a reference to GNU) license
-information and exit successfully.
+.BR \-l ", " \-\-license
+Show the copyright licensing terms and exit.
+.
 .SH EXAMPLES
 .TP
 .B dpkg\-name bar\-foo.deb
@@ -88,6 +83,7 @@ don't come with section information.
 .TP
 .B dpkg \-\-build debian\-tmp && dpkg\-name \-o \-s .. debian\-tmp.deb
 This can be used when building new packages.
+.
 .SH BUGS
 Some packages don't follow the name structure
 <package>_<version>_<architecture>.deb. Packages renamed by dpkg\-name
@@ -97,6 +93,7 @@ packages are installed by
 .BR dpkg (1),
 but other installation tools
 might depend on this naming structure.
+.
 .SH SEE ALSO
 .BR deb (5),
 .BR deb\-control (5),
@@ -104,6 +101,7 @@ might depend on this naming structure.
 .BR dpkg\-deb (1),
 .BR find (1),
 .BR xargs (1).
+.
 .SH COPYRIGHT
 Copyright 1995,1996 Erick Branderhorst.
 .B dpkg\-name
