--- a/man/dpkg-query.1
+++ b/man/dpkg-query.1
@@ -1,37 +1,10 @@
-.TH dpkg\-query 1 "2006-04-09" "Debian Project" "dpkg suite"
+.TH dpkg\-query 1 "2007-03-06" "Debian Project" "dpkg suite"
 .SH NAME
 dpkg\-query \- a tool to query the dpkg database
 .
 .SH SYNOPSIS
 .B dpkg\-query
-.BR \-l | \-\-list
-.IR package-name-pattern " ..."
-.br
-.B dpkg\-query
-.BR \-W | \-\-show
-.IR package-name-pattern " ..."
-.br
-.B dpkg\-query
-.BR \-s | \-\-status
-.IR package-name " ..."
-.br
-.B dpkg\-query
-.BR \-L | \-\-listfiles
-.IR package-name " ..."
-.br
-.B dpkg\-query
-.BR  \-S | \-\-search
-.IR filename-search-pattern " ..."
-.br
-.B dpkg\-query
-.BR \-p | \-\-print\-avail
-.IR package-name " ..."
-.br
-.B dpkg\-query
-.BR \-\-licence | \-\-license
-.br
-.B dpkg\-query
-.BR \-\-version
+.RI [ option "...] " command
 .
 .SH DESCRIPTION
 \fBdpkg\-query\fP is a tool to show information about packages listed in
@@ -39,7 +12,7 @@ the \fBdpkg\fP database.
 .
 .SH COMMANDS
 .TP
-\fB\-l\fP | \fB\-\-list\fP \fIpackage-name-pattern\fP ...
+.BR \-l ", " \-\-list " \fIpackage-name-pattern\fP ..."
 List packages matching given pattern. If no \fIpackage-name-pattern\fP
 is given, list all packages in \fI/var/lib/dpkg/status\fP, excluding
 the ones marked with state purge. Normal shell wildchars are allowed
@@ -58,45 +31,48 @@ automatically to fit the terminal width. It is intended for human
 readers, and is not easily machine-readable. See \fB\-W\fP (\fB\-\-show\fP)
 and \fB\-\-showformat\fP for a way to configure the output format.
 .TP
-\fB\-W\fP | \fB\-\-show\fP \fIpackage-name-pattern\fP ...
+.BR \-W ", " \-\-show " \fIpackage-name-pattern\fP ..."
 Just like the \fB\-\-list\fP option this will list all packages matching
 the given pattern. However the output can be customized using the
 \fB\-\-showformat\fP option.
 The default output format gives one line per matching package, each line
 having the name and installed version of the package, separated by a tab.
 .TP
-\fB\-s\fP | \fB\-\-status\fP \fIpackage-name\fP ...
+.BR \-s ", " \-\-status " \fIpackage-name\fP ..."
 Report status of specified package. This just displays the entry in
 the installed package status database.
 .TP
-\fB\-L\fP | \fB\-\-listfiles\fP \fIpackage-name\fP ...
+.BR \-L ", " \-\-listfiles " \fIpackage-name\fP ..."
 List files installed to your system from \fBpackage-name\fP.
 However, note that files created by package-specific
 installation-scripts are not listed.
 .TP
-\fB\-S\fP | \fB\-\-search\fP \fIfilename-search-pattern\fP ...
+.BR \-S ", " \-\-search " \fIfilename-search-pattern\fP ..."
 Search for a filename from installed packages. All standard shell
 wildchars can be used in the pattern. This command will not list
 extra files created by maintainer scripts, nor will it list
 alternatives.
 .TP
-\fB\-p\fP |\fB\-\-print\-avail\fP \fIpackage-name\fP
+.BR \-p ", " \-\-print\-avail " \fIpackage-name\fP"
 Display details about \fIpackage-name\fP, as found in
 \fI/var/lib/dpkg/available\fP.
 .TP
-\fB\-\-licence\fP | \fB\-\-license\fP
-Display licence and copyright information.
+.BR \-h ", " \-\-help
+Show the usage message and exit.
 .TP
-\fB\-\-version\fP
-Display version information.
+.B \-\-version
+Show the version and exit.
+.TP
+.BR \-\-license ", " \-\-licence
+Show the copyright licensing terms and exit.
 .
 .SH OPTIONS
 .TP
-\fB\-\-admindir=\fIdir\fP
+.BI \-\-admindir= dir
 Change the location of the \fBdpkg\fR database. The default location is
 \fI/var/lib/dpkg\fP.
 .TP
-\fB-f\fP | \fB\-\-showformat=\fP\fIformat\fR
+.BR \-f ", " \-\-showformat=\fIformat\fR
 This option is used to specify the format of the output \fB\-\-show\fP
 will produce. The format is a string that will be output for each package
 listed.
