Reorder EXAMPLES section.

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,5 +1,9 @@
 2007-03-06  Guillem Jover  <guillem@debian.org>
 
+	* update-alternatives.8: Reorder EXAMPLES section.
+
+2007-03-06  Guillem Jover  <guillem@debian.org>
+
 	* cleanup-info.8: Unify the summary.
 	Unify '--help' and '--version' descriptions.
 	Remove unneeded quotes in section names.
