--- a/man/update-alternatives.8
+++ b/man/update-alternatives.8
@@ -200,45 +200,6 @@ When a link group is in manual mode,
 the alternatives system will not make any changes
 to the system administrator's settings.
 .
-.SH EXAMPLES
-There are several packages which provide a text editor compatible
-with
-.BR vi ,
-for example
-.BR nvi
-and
-.BR vim .
-Which one is used is controlled by the link group
-.BR vi ,
-which includes links for the program itself and the associated manpage.
-.PP
-To display the available packages which provide
-.B vi
-and the current setting for it, use the
-.I \-\-display
-action:
-.RS
-.PP
-.BR "update\-alternatives \-\-display" vi
-.RE
-.PP
-To choose a particular
-.B vi
-implementation, use this command as root and then select a number
-from the list:
-.RS
-.PP
-.BR "update\-alternatives \-\-config" vi
-.RE
-.PP
-To go back to having the
-.B vi
-implementation chosen automatically, do this as root:
-.RS
-.PP
-.BR "update\-alternatives \-\-auto" vi
-.RE
-.
 .SH COMMANDS
 .TP
 \fB\-\-install\fR \fIgenname symlink altern priority\fR [\fB\-\-slave\fR \fIgenname symlink altern\fR] ...
@@ -391,6 +352,33 @@ outputs error messages on its standard error channel and
 returns an exit status of 2.
 These diagnostics should be self-explanatory;
 if you do not find them so, please report this as a bug.
+.
+.SH EXAMPLES
+There are several packages which provide a text editor compatible
+with \fBvi\fP, for example \fBnvi\fP and \fBvim\fP. Which one is used
+is controlled by the link group \fBvi\fP, which includes links for the
+program itself and the associated manpage.
+.PP
+To display the available packages which provide \fBvi\fP and the current
+setting for it, use the \fI\-\-display\fP action:
+.RS
+.PP
+.B update\-alternatives \-\-display vi
+.RE
+.PP
+To choose a particular \fBvi\fP implementation, use this command as root
+and then select a number from the list:
+.RS
+.PP
+.B update\-alternatives \-\-config vi
+.RE
+.PP
+To go back to having the \fBvi\fP implementation chosen automatically, do
+this as root:
+.RS
+.PP
+.B update\-alternatives \-\-auto vi
+.RE
 .
 .SH BUGS
 If you find a bug, please report it using the Debian bug-tracking system,
