--- a/man/dpkg-scanpackages.1
+++ b/man/dpkg-scanpackages.1
@@ -21,8 +21,8 @@ dpkg\-scanpackages - create Packages files
 .B dpkg\-scanpackages
 .RI [ options ]
 .I binary-dir
-.I override-file
-.RI [ path-prefix ]
+.RI [ override-file
+.RI [ path-prefix ]]
 .B >
 .I Packages
 .
