--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2007-03-06  Guillem Jover  <guillem@debian.org>
+
+	* scripts/dpkg-scanpackages.pl (usage): Documemt that the override
+	file is now optional.
+	(load_override): New function, refactored. Handle the case where
+	'$override' is undefined.
+
 2007-02-28  Guillem Jover  <guillem@debian.org>
 
 	* scripts/dpkg-checkbuilddeps.pl: Make getopt parse '--admindir'.
