--- a/debian/changelog
+++ b/debian/changelog
@@ -42,7 +42,7 @@ dpkg (1.14.0) UNRELEASED; urgency=low
   * Add support for '--admindir' in dpkg-buildpackage, dpkg-checkbuilddeps
     and dpkg-shlibdeps. Closes: #162348
   * Cleaning and format unification of manual pages.
-  * Make the override-file argument to dpkg-scanpackages options.
+  * Make the override-file argument to dpkg-scanpackages optional.
 
   [ Updated dpkg translations ]
   * Romanian (Eddy Petrișor).
