--- a/debian/changelog
+++ b/debian/changelog
@@ -43,6 +43,7 @@ dpkg (1.14.0) UNRELEASED; urgency=low
     and dpkg-shlibdeps. Closes: #162348
   * Cleaning and format unification of manual pages.
   * Make the override-file argument to dpkg-scanpackages optional.
+  * Refactor compression filtering code.
 
   [ Updated dpkg translations ]
   * Romanian (Eddy Petrișor).
