* scripts/changelog/debian.pl: Fix call to outputclose by passing 	$varlistfile to it.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-03-12  Guillem Jover  <guillem@debian.org>
 
+	* scripts/changelog/debian.pl: Fix call to outputclose by passing
+	$varlistfile to it.
+
+2007-03-12  Guillem Jover  <guillem@debian.org>
+
 	* lib/dpkg.h (compression_type): Rename to ...
 	(compress_type): ... this. Fix all users.
 	(CAT): Rename to ...
