Actually, fix last commit:
	* scripts/changelog/debian.pl: Fix call to outputclose by not passing
	anything to it.
	($varlistfile): Remove unused variable.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,8 @@
 2007-03-12  Guillem Jover  <guillem@debian.org>
 
-	* scripts/changelog/debian.pl: Fix call to outputclose by passing
-	$varlistfile to it.
+	* scripts/changelog/debian.pl: Fix call to outputclose by not passing
+	anything to it.
+	($varlistfile): Remove unused variable.
 
 2007-03-12  Guillem Jover  <guillem@debian.org>
 
