Split override file information from dpkg-scanpackages(1) into deb-override(5) manual page.

--- a/debian/changelog
+++ b/debian/changelog
@@ -44,6 +44,8 @@ dpkg (1.14.0) UNRELEASED; urgency=low
   * Cleaning and format unification of manual pages.
   * Make the override-file argument to dpkg-scanpackages optional.
   * Refactor compression filtering code.
+  * Split override file information from dpkg-scanpackages(1) into
+    deb-override(5) manual page.
 
   [ Updated dpkg translations ]
   * Romanian (Eddy Petrișor).
