--- a/man/dpkg-scansources.1
+++ b/man/dpkg-scansources.1
@@ -63,6 +63,7 @@ Show the usage message and exit.
 Show the version and exit.
 .
 .SH "SEE ALSO"
+.BR deb\-override (5),
 .BR dpkg\-scanpackages (1).
 .
 .SH AUTHOR
