--- a/man/dpkg-scanpackages.1
+++ b/man/dpkg-scanpackages.1
@@ -85,50 +85,6 @@ Show the usage message and exit.
 .BR \-\-version
 Show the version and exit.
 .
-.SH THE OVERRIDE FILE
-While most information about a package can be found in the control file,
-some must be filled in by the distribution czars rather than by the
-maintainer, because they relate to the arrangement of files for release
-rather than the actual dependencies and description of the package.
-This information is found in the override file.
-.PP
-The override file has a simple whitespace-delimited format. Comments are
-allowed (denoted with a
-.BR # ).
-.PP
-.in +5
-.I package
-.I priority
-.I section
-.RI [ maintainerinfo ]
-.in -5
-.PP
-.I package
-is the name of the package. Entries in the override file for packages
-not found in the tree of binary packages are ignored.
-.PP
-.I priority
-and
-.I section
-place the package within the release tree; these ought not to be found
-in the control file. If the package is found in a subdirectory of
-.IR binarydir ,
-that will be checked against
-.IR section .
-.PP
-.IR maintainerinfo ,
-if present, can be either the name of a maintainer for an unconditional
-override, or else
-.I oldmaintainer
-.B =>
-.I newmaintainer
-to perform a substitution.
-.PP
-The override files used to make the official Packages lists may be found
-in the
-.I indices
-directory on any Debian mirror.
-.
 .SH DIAGNOSTICS
 .B dpkg\-scanpackages
 outputs the usual self-explanatory errors. It also warns about packages
@@ -139,4 +95,5 @@ maintainer substitutions which do not take effect.
 .SH SEE ALSO
 .BR dpkg (1),
 .BR dselect (1),
+.BR deb\-override (5),
 .BR dpkg\-scansources (1).
