--- a/man/deb-override.5
+++ b/man/deb-override.5
@@ -65,6 +65,6 @@ in the
 directory on any Debian mirror.
 .
 .SH SEE ALSO
-.BR dpkg\-packages (1),
+.BR dpkg\-scanpackages (1),
 .BR dpkg\-scansources (1),
 .BR apt\-ftparchive (1).
