Split dpkg-source(1) into independent man pages, namely dpkg-buildpackage(1), dpkg-distaddfile(1), dpkg-genchanges(1), dpkg-gencontrol(1), dpkg-parsechangelog(1), dpkg-shlibdeps(1), deb-shlibs(5) and deb-substvars(5).

--- a/debian/changelog
+++ b/debian/changelog
@@ -46,6 +46,10 @@ dpkg (1.14.0) UNRELEASED; urgency=low
   * Refactor compression filtering code.
   * Split override file information from dpkg-scanpackages(1) into
     deb-override(5) manual page.
+  * Split dpkg-source(1) into independent man pages, namely
+    dpkg-buildpackage(1), dpkg-distaddfile(1), dpkg-genchanges(1),
+    dpkg-gencontrol(1), dpkg-parsechangelog(1), dpkg-shlibdeps(1),
+    deb-shlibs(5) and deb-substvars(5).
 
   [ Updated dpkg translations ]
   * Romanian (Eddy Petrișor).
