--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,5 +1,43 @@
 2007-03-12  Guillem Jover  <guillem@debian.org>
 
+	* dpkg-source.1: Split individual man pages to ...
+	* deb-shlibs.5: ... here and ...
+	* deb-substvars.5: ... here and ...
+	* dpkg-buildpackage.1: ... here and ...
+	* dpkg-distaddfile.1: ... here and ...
+	* dpkg-genchanges.1: ... here and ...
+	* dpkg-gencontrol.1: ... here and ...
+	* dpkg-parsechangelog.1: ... here and ...
+	* dpkg-shlibdeps.1: ... here.
+	* Makefile.am (all-local): Do not make the symlinks anymore.
+	(dpkg_source_aliases): Move to ...
+	(dist_man_MANS): ... here.
+	(man_MANS): Remove variable.
+	(CLEANFILES): Likewise.
+	* po/po4a.cfg: Add stanzas for deb-shlibs.5, deb-substvars.5,
+	dpkg-buildpackage.1, dpkg-distaddfile.1, dpkg-genchanges.1,
+	dpkg-gencontrol.1, dpkg-parsechangelog.1 and dpkg-shlibdeps.1.
+	* po/add_fr/dpkg-source.1.fr.add: Copy to ...
+	* po/add_fr/deb-shlibs.5.fr.add: ... here and ...
+	* po/add_fr/deb-substvars.5.fr.add: ... here and ...
+	* po/add_fr/dpkg-buildpackage.1.fr.add: ... here and ...
+	* po/add_fr/dpkg-distaddfile.1.fr.add: ... here and ...
+	* po/add_fr/dpkg-genchanges.1.fr.add: ... here and ...
+	* po/add_fr/dpkg-gencontrol.1.fr.add: ... here and ...
+	* po/add_fr/dpkg-parsechangelog.1.fr.add: ... here and ...
+	* po/add_fr/dpkg-shlibdeps.1.fr.add: ... here.
+	* po/add_es/dpkg-source.1.es.add: Copy to ...
+	* po/add_es/deb-shlibs.5.es.add: ... here and ...
+	* po/add_es/deb-substvars.5.es.add: ... here and ...
+	* po/add_es/dpkg-buildpackage.1.es.add: ... here and ...
+	* po/add_es/dpkg-distaddfile.1.es.add: ... here and ...
+	* po/add_es/dpkg-genchanges.1.es.add: ... here and ...
+	* po/add_es/dpkg-gencontrol.1.es.add: ... here and ...
+	* po/add_es/dpkg-parsechangelog.1.es.add: ... here and ...
+	* po/add_es/dpkg-shlibdeps.1.es.add: ... here.
+
+2007-03-12  Guillem Jover  <guillem@debian.org>
+
 	* Makefile.am (dist_man_MANS): Add deb-override.5.
 	* po/po4a.cfg: Add a stanza for deb-override.5.
 	* dpkg-scanpackages.1: Move override file information to ...
