* po/add_de/dpkg-scanpackages.1.de.add: Copy to ... 	* po/add_de/deb-override.5.de.add: ... here. 	* po/add_es/dpkg-scanpackages.1.es.add: Copy to ... 	* po/add_es/deb-override.5.es.add: ... here. 	* po/add_fr/dpkg-scanpackages.1.fr.add: Copy to ... 	* po/add_fr/deb-override.5.fr.add: ... here. 	* po/add_ja/dpkg-scanpackages.1.ja.add: Copy to ... 	* po/add_ja/deb-override.5.ja.add: ... here.

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,14 @@
+2007-03-13  Guillem Jover  <guillem@debian.org>
+
+	* po/add_de/dpkg-scanpackages.1.de.add: Copy to ...
+	* po/add_de/deb-override.5.de.add: ... here.
+	* po/add_es/dpkg-scanpackages.1.es.add: Copy to ...
+	* po/add_es/deb-override.5.es.add: ... here.
+	* po/add_fr/dpkg-scanpackages.1.fr.add: Copy to ...
+	* po/add_fr/deb-override.5.fr.add: ... here.
+	* po/add_ja/dpkg-scanpackages.1.ja.add: Copy to ...
+	* po/add_ja/deb-override.5.ja.add: ... here.
+
 2007-03-12  Guillem Jover  <guillem@debian.org>
 
 	* dpkg-source.1: Split individual man pages to ...
