* scripts/dpkg-shlibdeps.pl: Use new style file handler references.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2007-03-13  Guillem Jover  <guillem@debian.org>
 
+	* scripts/dpkg-shlibdeps.pl: Use new style file handler references.
+
+2007-03-13  Guillem Jover  <guillem@debian.org>
+
 	* lib/compression.c (compress_cat): Support compress_type_lzma.
 	* dpkg-deb/build.c (do_build): Likewise.
 	* dpkg-deb/main.c (usage): Document that '-Z' now accepts lzma as well.
