Traditional Chinese translation update

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,4 +1,8 @@
-2007-01-11  Eddy Petrișor  <eddy.petrisor@gmail.com>
+2007-03-17  Anthony Wong  <me@ypwong.org>
+
+	* zh_TW.po: Update for one string. Closes: #415230
+
+2007-01-11  Eddy Petri?or  <eddy.petrisor@gmail.com>
 
 	* ro.po: Typo correction in dpkg-divert.
 
@@ -15,7 +19,7 @@
 
 	* pa.po: New Punjabi translation (201t up to now)
 
-2006-12-22  Eddy Petrișor  <eddy.petrisor@gmail.com>
+2006-12-22  Eddy Petri?or  <eddy.petrisor@gmail.com>
 
 	* ro.po: some improvements in wording and wrote my name with the right
 	diacritics (still 920t).
